# einsum

./: Cargo.toml  README.md
einsum_impl/: Cargo.toml
einsum_impl/src/: lib.rs
src/: lib.rs  lib2.rs  parser.rs  rightarrow.rs
tests/: basic.rs
