[workspace]
members = ["einsum_impl"]

[package]
name = "einsum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
einsum_impl = { path = "./einsum_impl" }
ndarray = "0.15.6"
num-traits = "0.2.18"
rust-numpy = "0.1.0"

[lib]
