[package]
name = "einsum_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.2.16"
pyo3 = { version = "0.20.2" }
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }


[lib]
proc_macro = true
