[package]
name = "einsum_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quote = "1.0.35"
regex-macro = "0.2.0"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }


[lib]
proc_macro = true
